--- a/contents/previousContents/数据结构 -《大话数据结构》读书笔记(2).md
+++ b/contents/previousContents/数据结构 -《大话数据结构》读书笔记(2).md
@@ -1,7 +1,9 @@
 # 数据结构 -《大话数据结构》读书笔记(2)
 
-#####文章共分为三篇
-#####[第一篇：数据结构 -《大话数据结构》读书笔记(1)](https://www.jianshu.com/p/72aabf06a450)
+##### 文章共分为三篇
+
+##### [第一篇：数据结构 -《大话数据结构》读书笔记(1)](https://github.com/liuzhongning/Articles/blob/master/contents/previousContents/数据结构%20-《大话数据结构》读书笔记(1).md)
+
 
 一、数据结构绪论
 
@@ -9,7 +11,7 @@
 
 三、线性表
 
-#####[第二篇：数据结构 -《大话数据结构》读书笔记(2)](https://www.jianshu.com/p/c7c16110b796)
+##### [第二篇：数据结构 -《大话数据结构》读书笔记(2)](https://github.com/liuzhongning/Articles/blob/master/contents/previousContents/数据结构%20-《大话数据结构》读书笔记(2).md)
 
 四、栈与队列
 
@@ -19,7 +21,7 @@
 
 七、图
 
-#####[第三篇：数据结构 -《大话数据结构》读书笔记(3)](https://www.jianshu.com/p/4fb2481c9b06)
+##### [第三篇：数据结构 -《大话数据结构》读书笔记(3)](https://github.com/liuzhongning/Articles/blob/master/contents/previousContents/数据结构%20-《大话数据结构》读书笔记(3).md)
 
 八、查找
 
@@ -260,4 +262,4 @@ C 语言中，比较两个串是否相等，必须是它们的串是否相等，
 
 ---
 
-##### 下一篇：[数据结构 -《大话数据结构》读书笔记(3)](https://www.jianshu.com/p/4fb2481c9b06)
+##### 下一篇：[数据结构 -《大话数据结构》读书笔记(3)](https://github.com/liuzhongning/Articles/blob/master/contents/previousContents/数据结构%20-《大话数据结构》读书笔记(3).md)
