--- a/contents/previousContents/数据结构 -《大话数据结构》读书笔记(3).md
+++ b/contents/previousContents/数据结构 -《大话数据结构》读书笔记(3).md
@@ -1,7 +1,8 @@
 # 数据结构 -《大话数据结构》读书笔记(3)
 
-#####文章共分为三篇
-#####[第一篇：数据结构 -《大话数据结构》读书笔记(1)](https://www.jianshu.com/p/72aabf06a450)
+##### 文章共分为三篇
+
+##### [第一篇：数据结构 -《大话数据结构》读书笔记(1)](https://github.com/liuzhongning/Articles/blob/master/contents/previousContents/数据结构%20-《大话数据结构》读书笔记(1).md)
 
 
 一、数据结构绪论
@@ -10,7 +11,7 @@
 
 三、线性表
 
-#####[第二篇：数据结构 -《大话数据结构》读书笔记(2)](https://www.jianshu.com/p/c7c16110b796)
+##### [第二篇：数据结构 -《大话数据结构》读书笔记(2)](https://github.com/liuzhongning/Articles/blob/master/contents/previousContents/数据结构%20-《大话数据结构》读书笔记(2).md)
 
 四、栈与队列
 
@@ -20,11 +21,12 @@
 
 七、图
 
-#####[第三篇：数据结构 -《大话数据结构》读书笔记(3)](https://www.jianshu.com/p/4fb2481c9b06)
+##### [第三篇：数据结构 -《大话数据结构》读书笔记(3)](https://github.com/liuzhongning/Articles/blob/master/contents/previousContents/数据结构%20-《大话数据结构》读书笔记(3).md)
 
 八、查找
 
 九、排序
+
 
 ---
 <br><br/>
@@ -199,7 +201,7 @@
 
 ---
 
-##### 相关文章：[算法-几种排序算法 OC 版](https://www.jianshu.com/p/168462a3ce0b)
+##### 相关文章：[算法-几种排序算法 OC 版](https://github.com/liuzhongning/Articles/blob/master/contents/previousContents/算法-几种排序算法%20OC%20版.md)
 ##### 代码传送门：[排序算法 OC 版](https://github.com/liuzhongning/NNSort)
 
 
