《代码整洁之道》读书笔记

--- a/contents/Clean Code/《代码整洁之道》读书笔记.md
+++ b/contents/Clean Code/《代码整洁之道》读书笔记.md
@@ -1,5 +1,7 @@
 # 《代码整洁之道》读书笔记
 
+![](https://github.com/liuzhongning/Articles/blob/master/resources/Clean%20Code/CleanCode. png)
+
 ### 有意义的命名
 
 - 命名语意化：有意义的命名能够替代注释
